# swagger/swagger.json
@@ -16,7 +16,7 @@
     "basePath": "/gofa",
     "paths": {
         "/group/userlist": {
-            "get": {
+            "post": {
                 "tags": [
                     "group"
                 ],
@@ -33,13 +33,16 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "success",
+                        "description": "",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/login"
+                                "$ref": "#/definitions/[\"uid1\",\"uid2\"]"
                             }
                         }
+                    },
+                    "403": {
+                        "description": "uid is empty"
                     }
                 }
             }
@@ -225,8 +228,8 @@
         }
     },
     "definitions": {
-        "login": {
-            "title": "login",
+        "[\"uid1\",\"uid2\"]": {
+            "title": "[\"uid1\",\"uid2\"]",
             "type": "object"
         },
         "models.Profile": {
